@@ -1,3 +1,35 @@
+-startup
+plugins/org.eclipse.equinox.launcher_1.6.400.v20210924-0641.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.win32.win32.x86_64_1.2.700.v20221108-1024
+-product
+org.eclipse.epp.package.java.product
+-showsplash
+org.eclipse.epp.package.common
+--launcher.defaultAction
+openFile
+--launcher.appendVmargs
+-vm
+C:\Users\t769118\DevTools\BHS\2.0.0\java\jdk-17.0.7\bin\java.exe
+-vmargs
+-Djavax.net.ssl.trustStore=C:\etc\marketplace.eclipse.org.crt
+-Djavax.net.ssl.trustStorePassword=changeit
+-Djava.net.preferIPv4Stack=true
+-Dosgi.requiredJavaVersion=17
+-Dosgi.instance.area.default=@user.home/eclipse-workspace
+-Dosgi.dataAreaRequiresExplicitInit=true
+-Dorg.eclipse.swt.graphics.Resource.reportNonDisposed=true
+-Dsun.java.command=Eclipse
+-Xms256m
+-Xmx2048m
+-XX:+UseG1GC
+-XX:+UseStringDeduplication
+--add-modules=ALL-SYSTEM
+
+
+GPN
+
+
 Cannot open Eclipse Marketplace
 Cannot install remote marketplace locations: Cannot complete request to https://marketplace.eclipse.org/catalogs/api/p: No X509TrustManager implementation available
 Cannot complete request to https://marketplace.eclipse.org/catalogs/api/p: No X509TrustManager implementation available
